updated roster, resized gallery photos, updated treasurer, controls, and vp leads

--- a/index.html
+++ b/index.html
@@ -232,6 +232,21 @@
                 </div>
                 <div class="member-info">
                   <h4>Kirthika Ashokkumar</h4>
+                  <span>Vice President</span>
+                </div>
+              </div>
+            </div>
+          </row>
+
+          <div class="col-lg-2">
+              <div class="member" data-aos="fade-up" data-aos-delay="100">
+                <div class="pic">
+                  <a href="https://www.linkedin.com/in/ashleyhernandezmora/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/ashley-hernandez-mora.png" class="img-fluid" alt="Picture of club Treasurer" />
+                  </a>
+                </div>
+                <div class="member-info">
+                  <h4>Ashley Hernandez Mora</h4>
                   <span>Treasurer</span>
                 </div>
               </div>
@@ -355,7 +370,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-gears"></i>
-                  <span data-toggle="counter-up">7</span>
+                  <span data-toggle="counter-up">17</span>
                   <p>Mechanical</p>
                 </div>
               </div>
@@ -371,7 +386,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-binary"></i>
-                  <span data-toggle="counter-up">10</span>
+                  <span data-toggle="counter-up">11</span>
                   <p>Control Systems</p>
                 </div>
               </div>
@@ -379,7 +394,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-brain"></i>
-                  <span data-toggle="counter-up">7</span>
+                  <span data-toggle="counter-up">5</span>
                   <p>Intelligent Systems</p>
                 </div>
               </div>
@@ -420,7 +435,7 @@
       <div class="container" data-aos="zoom-in">
         <div class="owl-carousel gallery-carousel">
           <div class="gallery-item">
-            <img src="assets/img/gallery/robotics_group_photo.jpeg" class="gallery-img"
+            <img src="assets/img/gallery/robotics-group-photo.jpeg" class="gallery-img"
               alt="Picture of current 2025 Robotics team">
             Current Team
           </div>
@@ -431,27 +446,27 @@
             Open Sauce 2024
           </div>
           <div class="gallery-item">
-            <img src="assets/img/gallery/toborlife_group_photo.jpeg" class="gallery-img"
+            <img src="assets/img/gallery/toborlife-group-photo.jpeg" class="gallery-img"
               alt="Toborlife 2025 Group Picture">
             Robotics visits Toborlife, pictured with their G1 Basic model
           </div>
           <div class="gallery-item">
-            <img src="assets/img/gallery/lm_tour.jpg" class="gallery-img"
+            <img src="assets/img/gallery/lm-tour.jpg" class="gallery-img"
               alt="Lock Heed Martin tour Group Picture">
             Lockheed Martin Space tour
           </div>  
           <div class="gallery-item">
-            <img src="assets/img/gallery/pizza_day.jpg" class="gallery-img"
+            <img src="assets/img/gallery/pizza-day.jpg" class="gallery-img"
               alt="New members pizza party 2025">
             Pizza party to celebrate new recruits!
           </div>  
           <div class="gallery-item">
-            <img src="assets/img/gallery/new_room.jpg" class="gallery-img"
+            <img src="assets/img/gallery/new-room.jpg" class="gallery-img"
               alt="New room 2025">
             Moving into new room
           </div>  
           <div class="gallery-item">
-            <img src="assets/img/gallery/robotics_work_day.jpg" class="gallery-img"
+            <img src="assets/img/gallery/robotics-work-day.jpg" class="gallery-img"
               alt="Robotics work day">
             Robotics work day
           </div> 
