updated mechanical lead

--- a/index.html
+++ b/index.html
@@ -269,12 +269,12 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/brett-higginbotham-43468a24a/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/brett-higginbotham.png" class="img-fluid" alt="Picture of Mechanical lead" />
+                  <a href="https://www.linkedin.com/in/kate-oxley?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/kate-oxley.jpg" class="img-fluid" alt="Picture of Mechanical lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Brett Higginbotham</h4>
+                  <h4>Kate Oxley</h4>
                   <span>Mechanical Lead</span>
                 </div>
               </div>
