added xtool sponsor, current team image

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
       <div class="container" data-aos="zoom-in">
         <div class="owl-carousel gallery-carousel">
           <div class="gallery-item">
-            <img src="assets/img/gallery/robotics-group-photo.jpeg" class="gallery-img"
+            <img src="assets/img/gallery/current-team-2025.png" class="gallery-img"
               alt="Picture of current 2025 Robotics team">
             Current Team
           </div>
@@ -511,7 +511,7 @@
                   <p>Saturday 12pm to 2pm</p>
                   <a href="https://www.google.com/maps/dir//Charles+W.+Davidson+College+of+Engineering,+1+Washington+Square,+San+Jose,+CA+95192/@37.337644,-121.9517736,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x808fccbf9c49ae69:0x33714fc7762af269!2m2!1d-121.8817336!2d37.3376646"
                     target="_blank">
-                    Room : ENGR 317
+                    Room : ENGR 319
                   </a>
                   <br>
                 </div>
@@ -612,6 +612,12 @@
           <div class=" col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <a href="https://github.com/libhal/" target="_blank" rel="noopener noreferrer">
               <img src="assets/img/sponsors/libhal.png" class="img-fluid" alt="Libhal">
+            </a>
+          </div>
+
+          <div class=" col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <a href="https://www.xtool.com/" target="_blank" rel="noopener noreferrer">
+              <img src="assets/img/sponsors/xtool.png" class="img-fluid" alt="Libhal">
             </a>
           </div>
         </row>
