--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container-fluid d-flex align-items-center justify-content-between">
-      <a href="/" id="header-sjsu-robotics" class="logo active"><img src="assets/img/favicon.png" alt="logo"
+      <a href="/" id="header-sjsu-robotics" class="logo active"><img src="assets/img/new-logo-25-26.png" alt="logo"
           class="img-fluid">SJSU Robotics</a>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -116,7 +116,7 @@
     <div class="home-container" data-aos="fade-up" data-aos-delay="150">
       <h1 id="slogan">SJSU Robotics</h1>
       <br>
-      <a><img id="center-logo" src="assets/img/big-logo.png" alt="SJSU Robotics logo" class="img-fluid" width="45%"></a>
+      <a><img id="center-logo" src="assets/img/new-logo-25-26.png" alt="SJSU Robotics logo" class="img-fluid" width="45%"></a>
       <br>
       <h2 id="sub-slogan">A group of students at San Jose State University</h2>
       <div class="d-flex">
@@ -145,7 +145,7 @@
                 alt="Rover with SJSU Robotics flag">
               <div class="card-body">
                 <h5 class="card-title"><a>Current Project</a></h5>
-                <p class="card-text">This year the team is aiming to compete in the <b>2025 University Rover
+                <p class="card-text">This year the team is aiming to compete in the <b>2026 University Rover
                     Challenge</b>. We are building a Mars rover that can perform certain tasks such as detect life,
                   traverse rough terrain autonomously, and turn levers, flip switches, and move heavy
                   objects on its own.
@@ -155,7 +155,7 @@
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="card">
-              <img src="assets/img/aboutBoxes/who-can-join.jpg" class="card-img-top"
+              <img src="assets/img/aboutBoxes/who-can-join-2025.jpg" class="card-img-top"
                 alt="Robotics members working together">
 
               <div class="card-body">
@@ -175,10 +175,10 @@
                 alt="Robotics members around robotic arm">
               <div class="card-body">
                 <h5 class="card-title"><a>Our Team</a></h5>
-                <p class="card-text">We are multi-disciplinary robotics
+                <p class="card-text">We are a multi-disciplinary robotics
                   team with an emphasis in science, technology, and engineering.
-                  Our team has grown from focusing on small personal projects to year-long team
-                  competitions starting with the RASC-AL RoboOps competition in 2015.
+                  Each division takes on responsibilities and collaborates on tasks required by our year-long 
+                  competitions, currently the University Rover Challenge.
                 </p>
               </div>
             </div>
@@ -330,13 +330,13 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="" target="https://www.linkedin.com/in/christopher-eliot-hall/" rel="noopener noreferrer">
-                    <img src="assets/img/leads/eliot-hall.png" class="img-fluid"
+                  <a href="" target="https://www.linkedin.com/in/ahmadkaddoura/" rel="noopener noreferrer">
+                    <img src="assets/img/leads/ahmad-kaddoura.png" class="img-fluid"
                       alt="Picture of Intelligent Systems lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Eliot Hall</h4>
+                  <h4>Ahmad Kaddoura</h4>
                   <span>Intelligent Systems Lead</span>
                 </div>
               </div>
@@ -360,7 +360,7 @@
           }
         </style>
         <h2>Team Status</h2>
-        <h6>Updated: February 2024</h6>
+        <h6>Updated: November 2025</h6>
         <div class="general-row justify-content-end">
           <div class="col-lg-11">
             <div class="general-row">
@@ -368,7 +368,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-gears"></i>
-                  <span data-toggle="counter-up">17</span>
+                  <span data-toggle="counter-up">28</span>
                   <p>Mechanical</p>
                 </div>
               </div>
@@ -376,7 +376,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-chart-flow-2"></i>
-                  <span data-toggle="counter-up">8</span>
+                  <span data-toggle="counter-up">10</span>
                   <p>Electrical</p>
                 </div>
               </div>
@@ -384,7 +384,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-binary"></i>
-                  <span data-toggle="counter-up">11</span>
+                  <span data-toggle="counter-up">17</span>
                   <p>Control Systems</p>
                 </div>
               </div>
@@ -408,7 +408,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-dashboard-web"></i>
-                  <span data-toggle="counter-up">2</span>
+                  <span data-toggle="counter-up">3</span>
                   <p>Business</p>
                 </div>
               </div>
@@ -472,7 +472,12 @@
             <img src="assets/img/gallery/tabling.jpg" class="gallery-img"
               alt="tabling on 7th">
             Tabling on 7th Street
-          </div>   
+          </div>
+          <div class="gallery-item">
+            <img src="assets/img/gallery/robotics-halloween-25.png" class="gallery-img"
+              alt="Robotics Halloween 2025">
+            Robotics Halloween Karaoke Party
+          </div>
 
 
           </div>
